--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "lodash": "^4.17.21",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2"
   },
