--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
+    "next-nprogress-bar": "^2.0.3",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.23",
     "react": "^18.2.0",
