--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.1.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
@@ -23,8 +24,10 @@
     "next-auth": "^4.22.1",
     "next-nprogress-bar": "^2.0.3",
     "nextjs-progressbar": "^0.0.16",
+    "numeral": "^2.0.6",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-spinners": "^0.13.8",
